--- a/lead-tracker/style.css
+++ b/lead-tracker/style.css
@@ -18,8 +18,13 @@ button {
   background: #5f9341;
   color: white;
   padding: 10px 20px;
-  border: 0;
+  border: 1px solid #5f9341;
   font-weight: bold;
+}
+
+#delete-btn {
+  background: white;
+  color: #5f9341;
 }
 
 ul {
