--- a/leadTracker/style.css
+++ b/leadTracker/style.css
@@ -10,21 +10,21 @@ input {
   padding: 10px;
   box-sizing: border-box;
   box-shadow: 3px 3px 3px lightgray;
-  border: 1px solid #5f9341;
+  border: 1px solid #faa425;
   margin-bottom: 4px;
 }
 
 button {
-  background: #5f9341;
+  background: #faa425;
   color: white;
   padding: 10px 20px;
-  border: 1px solid #5f9341;
+  border: 1px solid #faa425;
   font-weight: bold;
 }
 
 #delete-btn {
   background: white;
-  color: #5f9341;
+  color: #faa425;
 }
 
 ul {
@@ -38,5 +38,5 @@ li {
 }
 
 li a {
-  color: #5f9341;
+  color: #faa425;
 }
